minor style changes, label change of routine css to avoid overlapping of home content label

--- a/src/front/styles/routines.css
+++ b/src/front/styles/routines.css
@@ -30,7 +30,7 @@
   transition: 0.8s;
 }
 
-.content {
+.contentroutines {
   position: relative;
   width: 60%;
   display: flex;
